Bug 60609 - Hung windows can no longer be rotated
Summary: Hung windows can no longer be rotated
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium minor
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-10 20:21 UTC by nerdopolis1
Modified: 2013-02-15 02:34 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description nerdopolis1 2013-02-10 20:21:03 UTC
As far as I can remember, this started happening when the fade animation was replaced with the busy cursor. This is probably just an extreemly minor usabilty papercut.
Comment 1 Kristian Høgsberg 2013-02-15 02:34:56 UTC
Unacceptable UI inconsitency, hot fix committed.

commit 0c36903fb399f187e45f835a6a04a3be320fa122
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Thu Feb 14 21:31:44 2013 -0500

    shell: Add back ability to rotate unresponsive surfaces
    
    When a surface in deemed unresponsive and we trigger the busy cursor, it's
    no longer possible to rotate the surface.  This is clearly unacceptable.
    This patch adds handling of right clicks to the busy grab so that we can
    continue to rotate a surface even if the client is sleeping.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=60609


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.